--- a/src/components/productCard.css
+++ b/src/components/productCard.css
@@ -1,4 +1,51 @@
-img {
+.products {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.products-img {
   width: 200px;
   height: 200px;
+}
+
+.cards {
+  margin-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 200px;
+  text-align: center;
+  font-family: arial;
+}
+
+.products-title {
+  color: black;
+  overflow: hidden;
+  max-height: 20px;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+.prices {
+  color: grey;
+  font-size: 22px;
+}
+
+.cardButtons {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  margin-top: 10px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.card button:hover {
+  opacity: 0.7;
 }
