--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -1,4 +1,82 @@
 .cart-img {
   width: 200px;
   height: 200px;
+  float: left;
+}
+
+.cartItem {
+  display: flex;
+  flex-direction: column;
+
+  margin: auto;
+  max-width: 75%;
+}
+
+.cartItemCard {
+  margin-top: 20px;
+  border-top: 2px solid black;
+  padding-top: 20px;
+}
+
+.cartButton {
+  width: 50px;
+  height: 30px;
+  border: 10px none;
+  border-radius: 5px;
+  color: white;
+  background-color: #000;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.cartButton:hover {
+  opacity: 0.7;
+}
+
+#minus {
+  margin-left: 5px;
+}
+
+.cartContent {
+  margin-left: 30%;
+}
+
+.cartFeature {
+  margin-top: 10px;
+}
+
+.cartCheckout {
+  border-top: 2px solid black;
+  margin: 20px auto;
+  max-width: 75%;
+}
+
+.totalItems {
+  font-size: 25px;
+}
+
+.subtotal {
+  font-size: 25px;
+  margin: 10px 0;
+}
+
+.cartCheckoutContent {
+  position: relative;
+  float: right;
+  padding-top: 10px;
+  text-align: center;
+}
+.checkOutButton {
+  width: 150px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  background-color: #000;
+  cursor: pointer;
+  margin-bottom: 15px;
+}
+
+.checkOutButton:hover {
+  opacity: 0.7;
 }
