--- a/src/components/login.css
+++ b/src/components/login.css
@@ -6,8 +6,6 @@
 }
 
 .loginForm {
-  /* max-width: 300px; */
-  /* margin: 0 auto; */
   padding: 20px;
   width: 50%;
   border: 1px #ddd;
@@ -32,8 +30,10 @@ input {
   margin-top: 5px;
 }
 .loginButton {
-  background-color: lightpink;
+  background-color: #000;
   color: #fff;
+  width: 80px;
+  height: 40px;
   font-size: 16px;
   border: none;
   border-radius: 4px;
@@ -41,5 +41,5 @@ input {
 }
 
 .loginButton:hover {
-  background-color: rgb(245, 132, 149);
+  opacity: 0.7;
 }
