--- a/src/components/productCard.css
+++ b/src/components/productCard.css
@@ -1,8 +1,13 @@
+/* .productsContainer {
+  height: 270vh;
+} */
+
 .products {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  margin-bottom: 20px;
 }
 
 .products-img {
@@ -46,6 +51,40 @@ a:link {
   font-size: 18px;
 }
 
-.card button:hover {
+.category {
+  margin-top: 10px;
+  display: flex;
+}
+
+.cardButtons:hover {
+  opacity: 0.7;
+}
+
+.title {
+  margin-left: 20px;
+}
+
+.dropdown {
+  margin-left: 20px;
+}
+
+.sort {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.sortButton {
+  margin-left: 10px;
+  width: 80px;
+  height: 30px;
+  border: 10px none;
+  border-radius: 5px;
+  color: white;
+  background-color: #000;
+  cursor: pointer;
+}
+
+.sortButton:hover {
   opacity: 0.7;
 }
