--- a/src/components/singleProduct.css
+++ b/src/components/singleProduct.css
@@ -23,3 +23,16 @@
 .price {
   font-size: 1.5em;
 }
+
+.cardButton {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  margin-top: 10px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
